# weatherman

./: README.md  main.py  pyproject.toml  test.json
functions/: aws.py  cache.py  dmi.py  opencage.py  plotting.py  pv.py  util.py
